Fixed min-width of dropdown being too small

--- a/docroot/sites/all/themes/informea.theme/css/style.css
+++ b/docroot/sites/all/themes/informea.theme/css/style.css
@@ -668,7 +668,7 @@ h1 {
     z-index: 1001;
     margin-top: 5px;
     box-shadow: none;
-    min-width: 100px;
+    min-width: 150px;
   }
   .region-above-nav #block-locale-language-content .dropdown li {
     display: block;
